# aapt2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  libandroidfw.cmake  libbase.cmake  libcutils.cmake  libexpat.cmake  libfmt.cmake  libgtest.cmake  libincfs.cmake  liblog.cmake  libpng.cmake  libutils.cmake  libziparchive.cmake  libzopfli.cmake  zipalign.cmake
patches/base/libs/androidfw/: Asset.cpp.patch  AssetManager.cpp.patch  ResourceTypes.cpp.patch  StringPiece.h.patch
patches/base/tools/aapt2/: Util.cpp.patch  Util.h.patch
patches/core/libcutils/: properties.cpp.patch  sockets_unix.cpp.patch
patches/core/libutils/: LruCache.h.patch  Threads.cpp.patch  misc.cpp.patch
patches/incremental_delivery/incfs/: map_ptr.cpp.patch  map_ptr.h.patch
patches/libbase/: logging.cpp.patch  properties.cpp.patch  unique_fd.h.patch
patches/libziparchive/: zip_archive.cc.patch  zip_writer.cc.patch  zip_writer.h.patch
patches/logging/liblog/: log.h.patch  logger_write.cpp.patch
prebuilt/arm64-v8a/: aapt  zipalign
prebuilt/armeabi-v7a/: aapt  zipalign
prebuilt/x86/: aapt  zipalign
prebuilt/x86_64/: aapt  zipalign
src/aapt/: Main.cpp
src/aapt2/: Configuration.pb.cc  Configuration.pb.h  Resources.pb.cc  Resources.pb.h  ResourcesInternal.pb.cc  ResourcesInternal.pb.h
src/aapt2/cmd/: Command.cpp  Compile.h
src/aapt2/jni/: aapt2_jni.cpp  aapt2_jni.h
src/aapt2/util/: Util.cpp
src/aidl/: Android.bp  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  aidl-format.sh  aidl.cpp  aidl.h  aidl_checkapi.cpp  aidl_const_expressions.cpp  aidl_dumpapi.cpp  aidl_dumpapi.h  aidl_language.cpp  aidl_language.h  aidl_language_l.cpp  aidl_language_l.h  aidl_language_l.ll  aidl_language_y.cpp  aidl_language_y.h  aidl_language_y.yy  aidl_to_cpp.cpp  aidl_to_cpp.h  aidl_to_cpp_common.cpp  aidl_to_cpp_common.h  aidl_to_java.cpp  aidl_to_java.h  aidl_to_ndk.cpp  aidl_to_ndk.h  aidl_to_rust.cpp  aidl_to_rust.h  aidl_typenames.cpp  aidl_typenames.h  aidl_unittest.cpp  ast_cpp.cpp  ast_cpp.h  ast_cpp_unittest.cpp  ast_java.cpp  ast_java.h  check_valid.cpp  check_valid.h  (+42 more)
src/aidl/metadata/: Android.bp  parser.cpp  test.cpp
src/aidl/scripts/redundancy_check/: Android.bp
src/aidl/tests/: aidl_integration_test.py  aidl_integration_test.xml  aidl_parser_fuzzer.dict  aidl_test_client.h  aidl_test_client_delegate.cpp  aidl_test_client_loggable_interface.cpp  aidl_test_client_ndk_delegate.cpp  aidl_test_client_ndk_loggable_interface.cpp  aidl_test_client_ndk_nested.cpp  aidl_test_client_ndk_nullables.cpp  aidl_test_client_ndk_parcelables.cpp  aidl_test_client_ndk_primitives_test.cpp  aidl_test_client_ndk_strings_test.cpp  aidl_test_client_ndk_versioned_interface.cpp  aidl_test_client_nested.cpp  aidl_test_client_parcelables.cpp  aidl_test_client_primitives.cpp  aidl_test_client_versioned_interface.cpp  aidl_test_service.cpp  fake_io_delegate.cpp  fake_io_delegate.h  golden_test.sh
src/aidl/tests/corpus/: example_cpp  example_enforce  example_java  example_ndk  example_rust  java_map  overflow_in_nested_interface
src/aidl/tests/golden_output/: .clang-format
src/aidl/tests/lazy_test/: Android.bp  LazyTestServiceCb.cpp  LazyTestServiceCb.h  ServerCb.cpp  aidl_lazy_cb_test_server.rc  main.cpp
src/aidl/tests/rust/: test_client.rs  test_service.rs  test_service_async.rs
src/aidl/tests/stability_test/: Android.bp
src/aidl/trace/android/: trace.h
src/androidfw/: Asset.cpp  AssetManager.cpp  ResourceTypes.cpp
src/androidfw/include/androidfw/: StringPiece.h
src/base/libs/androidfw/: Asset.cpp  AssetManager.cpp  ResourceTypes.cpp
src/base/tools/aapt2/: Configuration.pb.cc  Configuration.pb.h  (+1 more)
src/core/libcutils/: properties.cpp
src/core/libutils/: Threads.cpp
src/expat/: expat_config.h
src/googletest/: gtest-death-test.cc  gtest.cc
src/incfs/tests/: MountRegistry_test.cpp  hardening_benchmark.cpp  incfs_test.cpp
src/incfs/util/: map_ptr.cpp
src/libbase/: logging.cpp  properties.cpp
src/libcutils/: properties.cpp  sockets_unix.cpp
src/liblog/: logger_write.cpp  logprint.cpp
src/liblog/tests/: Android.bp  liblog_benchmark.cpp  liblog_convertPrintable_fuzzer.cpp  liblog_test.cpp  log_wrap_test.cpp  logprint_test.cpp
src/libutils/: Threads.cpp  misc.cpp
src/libziparchive/: zip_archive.cc  zip_archive_common.h  zip_writer.cc
src/logging/liblog/: logger_write.cpp
src/sysprop/include/: platform_tools_version.h
tools/: protoc-termux-aarch64
(+52 files in other folders)
